--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "@nuxt/icon": "1.15.0",
     "@nuxt/ui": "^3.3.0",
+    "@vuepic/vue-datepicker": "^11.0.2",
     "@vueuse/core": "^13.6.0",
     "@vueuse/nuxt": "^13.6.0",
     "nuxt": "^4.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "vite-plugin-eslint2": "^5.0.4",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
