--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "sass": "^1.89.2",
     "sass-embedded": "^1.89.2",
     "sass-loader": "^16.0.5",
-    "typescript": "^5.9.0"
+    "typescript": "^5.9.0",
+    "vite-svg-loader": "^5.1.0"
   },
   "prettier": {
     "overrides": [
