--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "devDependencies": {
     "@nuxt/eslint": "^1.7.1",
     "@nuxt/eslint-config": "^1.7.1",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
@@ -42,7 +44,7 @@
     "sass": "^1.89.2",
     "sass-embedded": "^1.89.2",
     "sass-loader": "^16.0.5",
-    "typescript": "^5.9.0",
+    "typescript": "^5.8.3",
     "vite-svg-loader": "^5.1.0"
   },
   "prettier": {
