--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "@headlessui/vue": "^1.7.23",
     "@nuxt/icon": "1.15.0",
     "@nuxt/ui": "^3.3.0",
+    "@pinia/nuxt": "^0.11.2",
     "@vuepic/vue-datepicker": "^11.0.2",
     "@vueuse/core": "^13.6.0",
     "@vueuse/nuxt": "^13.6.0",
     "nuxt": "^4.0.1",
+    "pinia": "^3.0.3",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "vite-plugin-eslint2": "^5.0.4",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-toastification": "^2.0.0-rc.5",
+    "zod": "^3.24.3"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
@@ -45,6 +49,7 @@
     "sass-embedded": "^1.89.2",
     "sass-loader": "^16.0.5",
     "typescript": "^5.8.3",
+    "universal-cookie": "^7",
     "vite-svg-loader": "^5.1.0"
   },
   "prettier": {
