--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,12 @@
     {
       "path": "./.nuxt/tsconfig.node.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "types": [
+      "@nuxt/types",
+      "@pinia/nuxt",
+      "import-meta"
+    ]
+  },
 }
