--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
+    "@nuxt/image": "^1.10.0",
     "@nuxt/icon": "1.15.0",
     "@nuxt/ui": "^3.3.0",
     "@pinia/nuxt": "^0.11.2",
@@ -23,6 +24,7 @@
     "@vueuse/nuxt": "^13.6.0",
     "nuxt": "^4.0.1",
     "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.4.1",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "vite-plugin-eslint2": "^5.0.4",
