--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
-    "@nuxt/image": "^1.10.0",
     "@nuxt/icon": "1.15.0",
+    "@nuxt/image": "^1.10.0",
     "@nuxt/ui": "^3.3.0",
     "@pinia/nuxt": "^0.11.2",
     "@vuepic/vue-datepicker": "^11.0.2",
@@ -50,6 +50,8 @@
     "sass": "^1.89.2",
     "sass-embedded": "^1.89.2",
     "sass-loader": "^16.0.5",
+    "stylelint": "^16.23.0",
+    "stylelint-config-standard-scss": "^15.0.1",
     "typescript": "^5.8.3",
     "universal-cookie": "^7",
     "vite-svg-loader": "^5.1.0"
@@ -71,7 +73,6 @@
       "prettier --write --ignore-unknown"
     ],
     "*.{css,scss}": [
-      "stylelint --fix",
       "prettier --write"
     ],
     "*.{json,md}": [
